--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,9 @@ addons:
   apt:
     sources:
     # add PPAs with more up-to-date toolchains
-    - ubuntu-toolchain-r-test
-    - llvm-toolchain-precise-3.6
+    #- ubuntu-toolchain-r-test
+    #- llvm-toolchain-precise-3.6
     packages:
-    # install toolchains
     - python-dev
     - python-numpy
 
