--- a/.travis.yml
+++ b/.travis.yml
@@ -28,5 +28,6 @@ before_script:
   - "cd /usr/src/gtest && sudo cmake . && sudo cmake --build . && sudo mv libg* /usr/local/lib/ ; cd -"
 
 script:
+  - travis_debug
   - mkdir build && cd build
   - cmake .. -DPYTHON_NUMPY_INCLUDE_DIR=/usr/lib/python3/dist-packages/numpy/core/include && make && ./test/xdata_array_test
